--- a/filler.html
+++ b/filler.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
 </head>
 <body>
-    <main class="Slimming_Wrapper Filler_Wrapper">
+    <main class="Slimming_Wrapper Filler_Wrapper Organic_Wrapper ">
         <header>
             <div class="top-social-bar">
                 <div class="child-wrp">
@@ -253,44 +253,77 @@
                     </div>
                     <div class="Slim_content">
                         <p>
-                            Dermal fillers also treat wrinkles on the face. They’re primarily used to treat smile lines, though the fillers can also be used to plump up the lips or cheeks. Sometimes, they’re used for hand treatments or to reduce the appearance of scars. Dermal fillers aren’t approved for plumping up other areas of the body, though, such as the breasts. Dermal fillers come in different forms, and like Botox, they’re injectable. Some are temporary and used primarily for soft tissues in the face along the smile lines.
+                            Do you want to regain that glow your face seems to have lost?
                         </p>
-                        <h2>How does Fillers Treatment help?</h2>
-                        <p>
-                            Not every wrinkle-filler is right for every type of wrinkle. The least risks and best results come from using the right one correctly. That's why you should only have fillers injected by a board-certified dermatologist or plastic surgeon with ongoing, special training. Here is a breakdown of available wrinkle fillers. It includes their basic ingredients, how they work, their pros and cons, and the best areas for treatment. Your doctor can help you choose the right one for you.
-                        </p>
+                         <p>
+                            Do you want to recover the soft, beautiful, agile, baby smooth skin you had, when you were younger?   
+                         </p>
+                         <p>
+                            Do you want to look in the mirror and relish what it shows you?
+                         </p>
+                         <p>
+                            Do you want to feel that your face looks revived, and beautiful, without the use of cosmetics and other products?
+                         </p>
+                         <p>
+                            Do you want to see that redness and blush of youthful skin, that hasn’t been decorating your cheeks in a long time?
+                         </p>
+                         <p>
+                            Are you disconcerted about always listening to questions like 'Are you tired?', 'Did you sleep well?'? We're sure that you are napping well. But, What you need to have that juvenility and freshness back are the Dermal Fillers. 
+                            <b>Fillers Treatment </b>
+                            is the doses that will make your face look younger than ever!
+                         </p>
+                         <h2>
+                            What is Filler Treatment
+                         </h2>
+                         <p>
+                            Dermal Fillers also heal wrinkles on the face. They’re essentially used to treat smile lines, although the fillers can also be used to plump up the lips or cheeks. Sometimes, they’re used for hand treatments or to reduce the presence of scars. Dermal Fillers aren’t permitted for plumping up other areas of the body, though, such as the breasts. Dermal Fillers come in different forms, and like botox, they’re injectable. Some are temporary and used primarily for soft tissues in the face along the smile lines. 
+                            <b>  Filler Skin treatment  </b> 
+                            is very useful if you are facing unwanted ageing problems. 
+                         </p>
                     </div>
                 </div>
             </section> 
             <!-- end---here -->
 
-            <section class="Benefit_Wrapper"   data-aos="fade-up"
+            <section class="Benefit_Wrapper Org_wrp"   data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
-                            <h2>Amazing Benefits of Dermal <span>Fillers</span></h2>
+                            <h2>Benefits of <span> Fillers</span></h2>
                     </div>
-                    <div class="Benefit-content">
-                        <p>Immediate and visible results</p>
-                        <p> Once you undergo a filler injection, the improvement in your facial contours become evident immediately. You don’t have to wait to enjoy the benefits of the treatment as you would with other, more invasive procedures.
-                        </p>
-                        <p>No recovery or downtime</p>
-                        <p>Depending on the number of injections you’re getting at your appointment, a dermal filler treatment can be as quick as 10 minutes. You literally can have the procedure done during your lunch break then get back to your normal routine.</p>
-                        <p>Minimal risk</p>
-                        <p>Dermal fillers carry risk of redness, swelling, and mild bruising at the injection site. These are side effects that gradually disappear over a few days.</p>
+                    <div class="Benefit-content Organic-Cnt">
+                       <ul>
+                           <li>
+                               Non-surgical procedure and non-invasive treatment. No scar marks or recovery time required
+                           </li>
+                           <li>  The instant process thus saving time  </li>
+                           <li> No restriction in movements or activities after the surgeries</li>
+                           <li> Natural process, no side-effects</li>
+                           <li> Advance Clinic ensures expert service thus, trained medical specialists apply the treatment on your face</li>
+                           <li>
+                               You can start the operation any day, anytime and without a skin test
+                           </li>
+                           <li> Youthful appearance  </li>
+                           <li> Gives natural look </li>
+                           <li> Advance Clinic presents customized filler treatment; based on your requirements</li>
+                        </ul>
                     </div>
                 </div>
             </section>
             
-            <section class="Filler-Treatment"   data-aos="fade-up"
+            <section class="Filler-Treatment  Slim_Service "   data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
-                        <h2>Fillers <span>Treatment Areas</span></h2>
+                        <h2>Cost of Botox and <span> Fillers Treatment?</span></h2>
                     </div>
-                    <div class="Filler-content">
+                    <div class="Filler-content Slim_content">
+                        <p> 
+                            All of us desire to look and feel our best in our day-to-day lives. However, propelling age, stressful lifestyles, as well as environmental constituents, may cause our skin and bodies to look older, or less perfect. Cosmetic surgery is a fabulous way to intensify our bodily appearance and replace our youthful looks. Dermal fillers are one such cosmetic procedure that can be used to reinforce and sculpt ageing skin to restore its young appearance.
+                              Dermal fillers come in many varieties and can be specifically implemented for your needs. The cost of the procedure is restricted by the type, quantity and brand of the dermal filler needed by you. With the availability of goods like Juvederm and Restylane, your procedure can be carried out by a specialist with the best effect and least side effects.
+                       </p>
                         <figure>
                             <img src="image/filler.png" alt="img">
                         </figure>
