--- a/index.html
+++ b/index.html
@@ -85,101 +85,101 @@
                                 <div class="sub-drop02 sub-cmn01">
                                     <div class="Sub_Hvr_wrp1 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
-                                            <li><a href="#">1Kg - Weight Loss</a></li>
-                                            <li><a href="#">Lipofit - 12 </a></li> 
+                                            <li><a href="slimming.html#1kg">1Kg - Weight Loss</a></li>
+                                            <li><a href="slimming.html#lipo">Lipofit - 12 </a></li> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp2 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
-                                            <li><a href="#">1Kg - Weight gain</a></li>
-                                            <li><a href="#">duo therapy</a></li> 
+                                            <li><a href="slimming.html#1kgGain">1Kg - Weight gain</a></li>
+                                            <li><a href="slimming.html#Duo">duo therapy</a></li> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp3 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
-                                            <li><a href="#">Full Body Therapy</a></li>
+                                            <li><a href="slimming.html#FullBody">Full Body Therapy</a></li>
                                             <li><a href="#">Premium Body Therapy</a></li> 
-                                            <li><a href="#">Herbal Anti - Cellulite Therapy</a></li> 
-                                            <li><a href="#">Manual Lymphatic Drainage Therapy</a></li> 
-                                            <li><a href="#">Bone Strengthening Therapy</a></li> 
+                                            <li><a href="slimming.html#Herbal">Herbal Anti - Cellulite Therapy</a></li> 
+                                            <li><a href="slimming.html#Manual">Manual Lymphatic Drainage Therapy</a></li> 
+                                            <li><a href="slimming.html#Bone">Bone Strengthening Therapy</a></li> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp4 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Tummy Trim Therapy</a></li>
-                                                <li><a href="#">Arm Trim Therapy</a></li> 
-                                                <li><a href="#">Hip Trim Therapy</a></li>
-                                                <li><a href="#">Thigh Trim Therapy</a></li> 
-                                                <li><a href="#">Chest Trim Therapy</a></li>
-                                                <li><a href="#">Side Trim Therapy</a></li> 
-                                                <li><a href="#">Integrative Massage Therapy</a></li> 
-                                                <li><a href="#">G-5</a></li>
+                                                <li><a href="slimming.html#tummy">Tummy Trim Therapy</a></li>
+                                                <li><a href="slimming.html#tummy">Arm Trim Therapy</a></li> 
+                                                <li><a href="slimming.html#tummy">Hip Trim Therapy</a></li>
+                                                <li><a href="slimming.html#tummy">Thigh Trim Therapy</a></li> 
+                                                <li><a href="slimming.html#tummy">Chest Trim Therapy</a></li>
+                                                <li><a href="slimming.html#tummy">Side Trim Therapy</a></li> 
+                                                <li><a href="slimming.html#tummy">Integrative Massage Therapy</a></li> 
+                                                <li><a href="slimming.html#tummy">G-5</a></li>
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp5 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Body Firming / Contouring</a></li>  
+                                                <li><a href="slimming.html#BFarming">Body Firming / Contouring</a></li>  
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp6 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Turboslim</a></li>
+                                                <li><a href="slimming.html#Turboslim">Turboslim</a></li>
                                                 <li><a href="#">Waist & Tummy Trim Treatment</a></li>
-                                                <li><a href="#">Arm Trim Treatment</a></li>
-                                                <li><a href="#">Hip Trim Treatment</a></li> 
-                                                <li><a href="#">Thigh Trim Treatment</a></li>
-                                                <li><a href="#">Get Therapy</a></li> 
-                                                <li><a href="#">Ultraslim / Ultratrim</a></li>
-                                                <li><a href="#">SlimLite / Trimlite</a></li>  
+                                                <li><a href="slimming.html#ArmTrt">Arm Trim Treatment</a></li>
+                                                <li><a href="slimming.html#HipTrim">Hip Trim Treatment</a></li> 
+                                                <li><a href="slimming.html#ThighTrim">Thigh Trim Treatment</a></li>
+                                                <li><a href="slimming.html#GelThrpy">Gel Therapy</a></li> 
+                                                <li><a href="slimming.html#Ultraslim">Ultraslim / Ultratrim</a></li>
+                                                <li><a href="slimming.html#Slitmlite">SlimLite / Trimlite</a></li>  
                                             </ul> 
                                         </ul>
                                     </div> 
                                     <div class="Sub_Hvr_wrp7 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Slimming Cum Core Muscle Strengthening Then</a></li>
-                                                <li><a href="#">Neuromuscular Therapy</a></li>
-                                                <li><a href="#">Analgesic T herapy</a></li>   
+                                                <li><a href="slimming.html#SlimmingMuscles">Slimming Cum Core Muscle Strengthening Then</a></li>
+                                                <li><a href="slimming.html#Neuromuscular">Neuromuscular Therapy</a></li>
+                                                <li><a href="slimming.html#Analgesic">Analgesic T herapy</a></li>   
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp8 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Bio Ener•gy Therapy - Pain Relief / Relaxation</a></li> 
+                                                <li><a href="slimming.html#BioEnergy">Bio Ener•gy Therapy - Pain Relief / Relaxation</a></li> 
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp9 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">Body</a></li>
-                                                <li><a href="#">Face</a></li>
-                                                <li><a href="#">Neck Hump   </a></li>
-                                                <li><a href="#">Knee</a></li> 
-                                                <li><a href="#">Calf</a></li>
-                                                <li><a href="#">Get Therapy</a></li> 
-                                                <li><a href="#">VTRON CTS - Refit programme</a></li> 
+                                                <li><a href="slimming.html#VTRONCTS">Body</a></li>
+                                                <li><a href="slimming.html#VTRONCTS">Face</a></li>
+                                                <li><a href="slimming.html#VTRONCTS">Neck Hump   </a></li>
+                                                <li><a href="slimming.html#VTRONCTS">Knee</a></li> 
+                                                <li><a href="slimming.html#VTRONCTS">Calf</a></li>
+                                                <li><a href="slimming.html#GelThrpy">Gel Therapy</a></li> 
+                                                <li><a href="slimming.html#Vtiarea">VTRON CTS - Refit programme</a></li> 
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp10 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">B-Line Treatment - Bust Enhancement / Bust Reduction / Bust Firming</a></li>
-                                                <li><a href="#">Morpho- Bust</a></li>  
+                                                <li><a href="slimming.html#Bline">B-Line Treatment - Bust Enhancement / Bust Reduction / Bust Firming</a></li>
+                                                <li><a href="slimming.html#Bust1">Morpho- Bust</a></li>  
                                             </ul> 
                                         </ul>
                                     </div>
                                     <div class="Sub_Hvr_wrp11 Sub_cmn">
                                         <ul class="weight_wrp hvr01">
                                             <ul class="weight_wrp">
-                                                <li><a href="#">FIGURE CORRECTION</a></li>  
+                                                <li><a href="slimming.html#FIGURETREATMENT">FIGURE CORRECTION</a></li>  
                                             </ul> 
                                         </ul>
                                     </div>
@@ -364,7 +364,7 @@
                             </div>
                             <div class="bottom_Bar">
                                 <h2>Dermat</h2>
-                                <a href="javascript:void(0)" class="hvr-radial-out">Book Now</a>
+                                <a href="botox.html" class="hvr-radial-out">Book Now</a>
                             </div>
                         </div>
                         <div class="Grid-item2 Grid-item_cmn01 Grid__hvr0001" data-tilt="" data-tilt-reverse="true">
@@ -372,7 +372,7 @@
                                 <div class="Hvr_cnt">
                                     <h2>Skin</h2>
                                     <p>Be Beautiful With Our Services</p>
-                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                    <a href="skintreatment.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
                             <div class="bottom_Bar">
@@ -385,7 +385,7 @@
                                 <div class="Hvr_cnt">
                                     <h2>permanent   makeup</h2>
                                     <p>Be Beautiful With Our Services</p>
-                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                    <a href="premanentmakeup.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
                             <div class="bottom_Bar">
@@ -398,7 +398,7 @@
                                 <div class="Hvr_cnt">
                                     <h2>Slimming</h2>
                                     <p>Be Beautiful With Our Services</p>
-                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                    <a href="slimming.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
                             <div class="bottom_Bar">
@@ -411,7 +411,7 @@
                                 <div class="Hvr_cnt">
                                     <h2>Hair Care</h2>
                                     <p>Be Beautiful With Our Services</p>
-                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                    <a href="hairtransplant.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
                             <div class="bottom_Bar">
@@ -654,36 +654,38 @@
                           <div class="Ft01 Ft_cmn01">
                               <h2>QUICK LINKS</h2>
                               <ul>
-                                 <li><a href = "#"class="hvr-underline-from-left" >Laser </a></li> 
-                                 <li><a href = "#"class="hvr-underline-from-left" >Botox </a></li>
-                                 <li><a href = "#"class="hvr-underline-from-left" >Fillers</a></li>
-                                 <li><a href = "#"class="hvr-underline-from-left" >Thread lift</a></li>
-                                 <li><a href = "#"class="hvr-underline-from-left" >Tummy tucks</a></li>
+                                 <li><a href = "lasertreatment.html"class="hvr-underline-from-left" >Laser </a></li> 
+                                 <li><a href = "botox.html"class="hvr-underline-from-left" >Botox </a></li>
+                                 <li><a href = "filler.html"class="hvr-underline-from-left" >Fillers</a></li>
+                                 <li><a href = "thread.html"class="hvr-underline-from-left" >Thread lift</a></li>
+                                 <li><a href = "slimming.html"class="hvr-underline-from-left" >Tummy tucks</a></li>
                                  <li><a href = "contact.html"class="hvr-underline-from-left" >Contact us</a></li>
+                                 <li><a href = "privacy.html"class="hvr-underline-from-left" >Privacy policy</a></li>
+                                 <li><a href = "terms.html"class="hvr-underline-from-left" >Terms & condition</a></li>
                               </ul>
                           </div>
                           <div class="Ft02 Ft_cmn01">
                             <h2>SERVICES </h2>
                             <ul>
-                               <li><a href = "#"class="hvr-underline-from-left" >Beauty  </a></li> 
-                               <li><a href = "#"class="hvr-underline-from-left" >Slimming  </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Laser </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Permanent </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Dermat </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Figure Correction  </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Hair Treatments </a></li>
+                               <li><a href = "skintreatment.html"class="hvr-underline-from-left" >Beauty  </a></li> 
+                               <li><a href = "slimming.html"class="hvr-underline-from-left" >Slimming  </a></li>
+                               <li><a href = "lasertreatment.html"class="hvr-underline-from-left" >Laser </a></li>
+                               <li><a href = "premanentmakeup.html"class="hvr-underline-from-left" >Permanent </a></li>
+                               <li><a href = "filler.html"class="hvr-underline-from-left" >Dermat </a></li>
+                               <li><a href = "slimming.html"class="hvr-underline-from-left" >Figure Correction  </a></li>
+                               <li><a href = "hairlaser.html"class="hvr-underline-from-left" >Hair Treatments </a></li>
                             </ul>
                         </div>
                         <div class="Ft03 Ft_cmn01">
                             <h2>SKIN CARE</h2>
                             <ul>
                                <li><a href = "#"class="hvr-underline-from-left" >Anti-aging</a></li> 
-                               <li><a href = "#"class="hvr-underline-from-left" >Skin Pigmentation  </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Skin Brightening </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Acne Treatment </a></li>
+                               <li><a href = "hairpigment.html"class="hvr-underline-from-left" >Skin Pigmentation  </a></li>
+                               <li><a href = "skintreatment.html"class="hvr-underline-from-left" >Skin Brightening </a></li>
+                               <li><a href = "cosmo.html"class="hvr-underline-from-left" >Acne Treatment </a></li>
                                <li><a href = "#"class="hvr-underline-from-left" >Under Eye Dark Circle </a></li>
                                <li><a href = "#"class="hvr-underline-from-left" >Skin Rejuvenation  </a></li>
-                               <li><a href = "#"class="hvr-underline-from-left" >Advanced Facial</a></li>
+                               <li><a href = "prpface.html"class="hvr-underline-from-left" >Advanced Facial</a></li>
                                <li><a href = "#"class="hvr-underline-from-left" >Dull Skin Treatment</a></li>
                             </ul>
                         </div>
