--- a/microderma.html
+++ b/microderma.html
@@ -249,61 +249,57 @@
             data-aos-duration="1300">
                 <div class="container">
                     <div class="slim-heading">
-                        <h2>Microdermabrasion <span>Treatment</span></h2>
+                        <h2>Microdermabrasion</h2>
                     </div>
                     <div class="Slim_content">
-                        <p>
-                            Microdermabrasion can exfoliate the skin, reduce signs of aging, and make the skin appear more even. The procedure is safe for a person with any skin color. 
-                        </p>
-                        <p>
-                            Microdermabrasion is a non-invasive cosmetic procedure. The specialist sprays or rubs fine crystals onto the skin with a wand that gently exfoliates the surface, removing the top layer. The aim is to make the skin appear younger. 
-                        </p>
-                        <p>
-                            The procedure should not be painful. The American Academy of Dermatology (AAD) estimates that it takes 30–40 minutes for the face and 20 minutes for the neck. Afterward, there may be slight swelling or sunburn-like symptoms for a few days.
-                        </p>
-                        <p>
-                            Before seeing reduced signs of aging, a person may require between 5 and 16 treatments from a skin care specialist. 
-                        </p>
-                        <p>
-                            People can have treatments weekly, every 2 weeks, or monthly, depending on their skin type and the reason for treatment.
-                        </p>
+                       <p>
+                         There is a mild type of artificial physiotherapy in which the act of skimming the outermost layer of dead skin cells from the epidermis is performed by a mechanical process. Generally, this process consists of two parts: - an ablution (skins) material such as a crystal or diamond knob and a suction device by which the skin is gently raised during the stripping.
+                       </p>
+                       <p>
+                        You should follow your doctor's instructions well after treatment ends. Do your best not to let your skin come in contact with direct sunlight. If it is very important to get out in the sun, apply a large amount of sunscreen lotion with at least SPF. 
+                       </p>
+                       <p>
+                         A session of the microdermabrasion process can take between 30 and 45 minutes. Depending on your skin type and the severity of the condition, you may have to go for 6 to 12 sessions of microdermabrasion. After treatment, you can do your daily life work.
+                       </p>
+                       <p>
+                        This is a non-irritating procedure that can be performed by a skincare specialist at his workplace. This process can also be done at home with certain types of products designed to mechanize the process of skin ablation. Many of the instruments used in this work in salons have suckers adjusted to the skin rubbing device. Recently, this facility is also found in many home-use devices.
+                       </p>
                     </div>
                 </div>
             </section> 
-            <!-- end---here -->
-
+            <!-- end---here --> 
             <section class="Benefit_Wrapper Org_wrp Thread-left-wrp Prp_wrp Micro_wrp" data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
                 <div class="container">
                     <div class="Benefit-heading">
-                        <h2>What to expect after  <span>microdermabrasion</span></h2>
+                        <h2>Microdermabrasion  <span>Treatment</span></h2>
                     </div>
                     <div class="Benefit-content Organic-Cnt micro-cnt"> 
-                     <p>
-                        There is little to no downtime after microdermabrasion. You should be able to resume your daily activities immediately. 
-                     </p>
-                     <p>
-                        Keep your skin hydrated and use gentle skincare products. Avoid using topical acne medications for at least one day after treatment. It’s extremely important to protect your skin with sunscreen. Your skin can be more sensitive to the sun in the few weeks after the treatment. 
-                     </p>
-                     <p>
-                        You can expect to see noticeable results immediately after the procedure. The number of microdermabrasion sessions needed will depend on the severity of your skin concerns as well as your expectations. 
-                     </p>
-                     <p>
-                        Your provider will likely design a plan for the initial number of sessions, as well as periodic maintenance treatments.
-                     </p>
+                        <p>
+                            Microdermabrasion makes the skin smooth and clean by exfoliating the skin and closing the pores. A small device will be used to perform a crystals blast on your skin and the spots on the skin are removed and the skin becomes clear and fair, making you look more beautiful. 
+                         </p>
+                         <p>
+                            These crystals, along with dead skin cells, will polish the surface of your skin before being removed by a vacuum tube. This allows for more radiant and new skin to rejuvenate. Chemical peeling involves applying high-strength acids to the skin. Applying these acids removes surface stains and reduces the appearance of darker stains. It improves the skin.
+                         </p>
+                         <p>
+                            There are three types of chemical peels. The most commonly used is a deep peel that uses phenol and goes deep into the skin. They are qualified to treat blemishes, wrinkles, or scars. Superficial peels improve the discoloration related to rough or dry skin caused by reduced sun energy. A medium peel is mostly used for anti-aging treatments because the skin contains glycolic acid which greatly benefits your skin. Make sure that you consult an experienced dermatologist and check for skin allergies. Investigating will reveal what is causing problems with your skin that you live through. Dermatologists will take into account the structure of your skin before applying any strong ointment or gel during the treatment you choose.
+                         </p>
                     </div>
                 </div>
             </section>
             
-            <section class="Filler-Treatment Organic_treatment Thread-Treatment" data-aos="fade-up"
+            <section class="Filler-Treatment Slim_Service  Organic_treatment Thread-Treatment" data-aos="fade-up"
             data-aos-easing="linear"
             data-aos-duration="1300">
                 <div class="container">
                     <div class="filler-heading">
-                        <h2>microdermabrasion<span> TreatmentAreas</span></h2>
+                        <h2>Microdermabrasion <span> Treatment Cost</span></h2>
                     </div>
-                    <div class="Filler-content organic-peel-content Thread-cnt01">
+                    <div class="Filler-content Slim_content  organic-peel-content Thread-cnt01">
+                        <p>
+                            The cost of one session of microdermabrasion depends on the area of the skin. From Rs 1500 - Rs 3000. The cost of chemical peeling can vary greatly depending on the type of peel you choose and the area to be treated. This is the best procedure to make your face beautiful at an affordable price.
+                        </p>
                         <figure>
                             <img src="image/micro1.png" alt="img">
                         </figure>
