--- a/slimming.html
+++ b/slimming.html
@@ -287,8 +287,8 @@
                 <h3><i class="fas fa-plus"></i></h4>
                 <h4><i class="fas fa-minus"></i></h3>
             </div>
-            <div class="Weight-Content-wrp Accro1">
-                <div class="Weight-Loss"> 
+            <div class="Weight-Content-wrp Accro1" id="1kg">
+                <div class="Weight-Loss" > 
                         <div class="Weight-content">
                             <div class="W-left">
                                 <figure>
@@ -306,9 +306,9 @@
                 <!-- end---here -->
 
                 <!-- Lipofit--Lipofit -->
-                <div class="Weight-Loss Lipofit">  
+                <div class="Weight-Loss Lipofit" id="lipo">  
                         <div class="Weight-content">
-                            <div class="W-left">
+                            <div class="W-left" >
                                 <figure>
                                     <img src="image/w2.png" alt="img">
                                 </figure>
@@ -340,8 +340,8 @@
         </div>
         <div class="Weight-Content-wrp Accro2">
                 <!-- weight--Gain --> 
-                <div class="Weight-Loss Weight-Gain"> 
-                        <div class="Weight-content">
+                <div class="Weight-Loss Weight-Gain" id="1kgGain"> 
+                        <div class="Weight-content" >
                             <div class="W-left">
                                 <figure>
                                     <img src="image/w3.png" alt="img">
@@ -357,8 +357,8 @@
                 </div>
                 <!-- end---here -->   
                 <!-- Therapy--Therapy -->
-                <div class="Weight-Loss Lipofit Therapy"> 
-                        <div class="Weight-content">
+                <div class="Weight-Loss Lipofit Therapy" id="Duo"> 
+                        <div class="Weight-content" >
                             <div class="W-left">
                                 <figure>
                                     <img src="image/w4.png" alt="img">
@@ -391,8 +391,8 @@
         </div>
         <div class="Weight-Content-wrp Accro3">
             <!-- Body-Therapies -->
-                <div class="Weight-Loss Body-Therapies"> 
-                    <div class="Weight-content">
+                <div class="Weight-Loss Body-Therapies" id="FullBody"> 
+                    <div class="Weight-content" >
                         <div class="W-left">
                             <figure>
                                 <img src="image/w5.png" alt="img">
@@ -408,8 +408,8 @@
                 </div>
             <!-- end---here -->
                 <!-- Herbal --Therapy -->
-                <div class="Weight-Loss Lipofit Herbal "> 
-                        <div class="Weight-content">
+                <div class="Weight-Loss Lipofit Herbal " id="Herbal"> 
+                        <div class="Weight-content" >
                         <div class="W-left">
                             <figure>
                                 <img src="image/w6.png" alt="img">
@@ -425,7 +425,7 @@
                 </div>
             <!-- end---here -->
               <!-- Lymphatic--Therapy -->
-              <div class="Weight-Loss Body-Therapies Lymphatic "> 
+              <div class="Weight-Loss Body-Therapies Lymphatic " id="Manual"> 
                 <div class="Weight-content">
                     <div class="W-left">
                         <figure>
@@ -442,7 +442,7 @@
             </div>
             <!-- end---here -->
             <!-- Bone--Therapy -->
-            <div class="Weight-Loss Lipofit Bone-Therapy"> 
+            <div class="Weight-Loss Lipofit Bone-Therapy" id="Bone"> 
                     <div class="Weight-content">
                     <div class="W-left">
                         <figure>
@@ -473,7 +473,7 @@
             <h3><i class="fas fa-plus"></i></h4>
             <h4><i class="fas fa-minus"></i></h3>
         </div>
-        <div class="Weight-Content-wrp Spt-thrpy  Accro4">   
+        <div class="Weight-Content-wrp Spt-thrpy  Accro4" id="tummy">   
              <div class="Spot-cnt">
                 <h3>
                 Tummy, Arm, Hip, Thigh, Back, Chest, and Side Trim Therapy
@@ -550,7 +550,7 @@ data-aos-duration="1500">
            <h4><i class="fas fa-minus"></i></h3>
        </div>
        <div class="Weight-Content-wrp Accro5">
-        <div class="Weight-Loss Body-Farming"> 
+        <div class="Weight-Loss Body-Farming" id="BFarming"> 
                 <div class="Weight-content">
                    <div class="W-left">
                       <figure>
@@ -582,7 +582,7 @@ data-aos-duration="1500">
        </div>
        <div class="Weight-Content-wrp Spt-thrpy Accro6">
          <div class="Weight-Loss Body-Farming"> 
-                <div class="Weight-content">
+                <div class="Weight-content" id="Turboslim">
                    <div class="W-left">
                       <figure>
                          <img src="image/w19.png" alt="img">
@@ -608,7 +608,7 @@ data-aos-duration="1500">
          </div>
              
         <!--Arm Trim--Treatment--->
-         <div class="Weight-Loss Body-Farming Lipofit"> 
+         <div class="Weight-Loss Body-Farming Lipofit" id="ArmTrt"> 
             <div class="Weight-content">
                <div class="W-left">
                   <figure>
@@ -625,7 +625,7 @@ data-aos-duration="1500">
         </div>
         <!-- end---here -->
          <!--Hip-Trim--Treatment--->
-         <div class="Weight-Loss Hip-Trim-"> 
+         <div class="Weight-Loss Hip-Trim-" id="HipTrim"> 
             <div class="Weight-content">
                <div class="W-left">
                   <figure>
@@ -642,7 +642,7 @@ data-aos-duration="1500">
         </div>
         <!-- end---here -->
            <!--Thigh-Trim--Treatment--->
-         <div class="Weight-Loss Thigh-Trim Lipofit"> 
+         <div class="Weight-Loss Thigh-Trim Lipofit" id="ThighTrim"> 
             <div class="Weight-content">
                <div class="W-left">
                   <figure>
@@ -659,7 +659,7 @@ data-aos-duration="1500">
         </div>
         <!-- end---here -->
            <!--Gel-Therapy--Treatment--->
-           <div class="Weight-Loss Gel-Therapy"> 
+           <div class="Weight-Loss Gel-Therapy" id="GelThrpy"> 
             <div class="Weight-content">
                <div class="W-left">
                   <figure>
@@ -676,7 +676,7 @@ data-aos-duration="1500">
         </div>
         <!-- end---here -->
           <!--Gel-Therapy--Treatment--->
-          <div class="Weight-Loss Gel-Therapy Lipofit"> 
+          <div class="Weight-Loss Gel-Therapy Lipofit" id="Ultraslim"> 
             <div class="Weight-content">
                <div class="W-left">
                   <figure>
@@ -693,7 +693,7 @@ data-aos-duration="1500">
         </div>
         <!-- end---here -->
          <!--Slimlite-Trimlite--Treatment--->
-         <div class="Weight-Loss Slimlite-Trimlite"> 
+         <div class="Weight-Loss Slimlite-Trimlite" id="Slitmlite"> 
             <div class="Weight-content">
                <div class="W-left">
                   <figure>
@@ -726,7 +726,7 @@ data-aos-duration="1500">
            <h4><i class="fas fa-minus"></i></h3>
        </div>
        <div class="Weight-Content-wrp Accro7">
-        <div class="Weight-Loss Body-Farming"> 
+        <div class="Weight-Loss Body-Farming" id="SlimmingMuscles"> 
                 <div class="Weight-content">
                    <div class="W-left">
                       <figure>
@@ -742,7 +742,7 @@ data-aos-duration="1500">
               </div>
          </div>
           <!--Neuromuscular---Therapy -->
-            <div class="Weight-Loss Neuromuscular-Therapy Lipofit"> 
+            <div class="Weight-Loss Neuromuscular-Therapy Lipofit" id="Neuromuscular"> 
                 <div class="Weight-content">
                     <div class="W-left">
                         <figure>
@@ -759,7 +759,7 @@ data-aos-duration="1500">
             </div>
           <!-- end---here -->
            <!--Analgesic ---Therapy -->
-           <div class="Weight-Loss Analgesic-Therapy"> 
+           <div class="Weight-Loss Analgesic-Therapy" id="Analgesic"> 
             <div class="Weight-content">
                 <div class="W-left">
                     <figure>
@@ -791,7 +791,7 @@ data-aos-duration="1500">
            <h4><i class="fas fa-minus"></i></h3>
        </div>
        <div class="Weight-Content-wrp Accro8">
-        <div class="Weight-Loss Body-Farming"> 
+        <div class="Weight-Loss Body-Farming" id="BioEnergy"> 
                 <div class="Weight-content">
                    <div class="W-left">
                       <figure>
@@ -822,7 +822,7 @@ data-aos-duration="1500">
            <h3><i class="fas fa-plus"></i></h4>
            <h4><i class="fas fa-minus"></i></h3>
        </div>
-       <div class="Weight-Content-wrp Spt-thrpy Accro9"> 
+       <div class="Weight-Content-wrp Spt-thrpy Accro9" id="VTRONCTS"> 
             <div class="Spot-cnt">
                 <h3>
                     VTRON CTS  Treatments for Body, Face, Neck Hump, Knee and Calf
@@ -838,7 +838,7 @@ data-aos-duration="1500">
             </p>
              </div>
           <!-- spot-area -->    
-             <div class="spot-area-wrp">
+             <div class="spot-area-wrp" id="Vtiarea">
                  <h2>VTRON CTS   <span>Treatments Areas</span></h2>
                  <figure>
                      <img src="image/vitron1.png" alt="img">
@@ -880,7 +880,7 @@ data-aos-duration="1500">
                <h4><i class="fas fa-minus"></i></h3>
            </div>
            <div class="Weight-Content-wrp Accro11">
-            <div class="Weight-Loss Body-Farming"> 
+            <div class="Weight-Loss Body-Farming" id="Bline"> 
                     <div class="Weight-content">
                        <div class="W-left">
                           <figure>
@@ -896,7 +896,7 @@ data-aos-duration="1500">
                   </div>
              </div> 
              <!--  -->
-             <div class="Weight-Loss Body-Farming Lipofit   "> 
+             <div class="Weight-Loss Body-Farming Lipofit " id="Bust1"> 
                 <div class="Weight-content">
                    <div class="W-left">
                       <figure>
