--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                 <h1>Slay with your glowing skin
                                     Get the best skin treatment today.</h1>
                                     <p> Advanced skin treatment at cosset world</p>
-                                    <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                                    <a href="lasertreatment.html" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -271,7 +271,7 @@
                                     By innovative and  reliable technique -->
                                 </h1> 
                                      <p>  By innovative and  reliable technique	</p>
-                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                                     <a href="slimming.html" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
                          </div>
                      </div>
@@ -292,7 +292,7 @@
                                 </h1>
                                      <p>
                                         Utilize the benefits of advanced PRP treatments.</p>
-                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                                     <a href="prphair.html" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
                          </div>
                      </div>
@@ -313,7 +313,7 @@
                                 </h1>
                                      <p>
                                         Get the best dermatologist with futuristic equipment.</p>
-                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                                     <a href="microderma.html" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
                          </div>
                      </div>
@@ -334,7 +334,7 @@
                                     </h1>
                                      <p>
                                         done using precise tools and advanced procedure.</p>
-                                     <a href="javascritp:void(0)" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
+                                     <a href="premanentmakeup.html" class="hvr-bounce-to-right">Learn more <i class="fas fa-chevron-right"></i></a>
                              </div>
                          </div>
                      </div>
@@ -359,7 +359,7 @@
                                 <div class="Hvr_cnt">
                                     <h2>Dermat</h2>
                                     <p>Be Beautiful With Our Services</p>
-                                    <a href="#" class="hvr-radial-out">View Explore</a>
+                                    <a href="botox.html" class="hvr-radial-out">View Explore</a>
                                 </div>
                             </div>
                             <div class="bottom_Bar">
